[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
aoc = { version = "*", path = "../aoc" }
itertools = "0.13.0"
num = "0.4.3"
rayon = "1.11.0"
regex = "1.11.1"
rustc-hash = "2.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
